Bugfixes and hiding of demo on mobile version

--- a/assets/src/styles.less
+++ b/assets/src/styles.less
@@ -25,6 +25,14 @@ body {
         }
     }
 
+    .cta-line.demo-line {
+        display: none;
+        
+        body.desktop-version & {
+            display: block;
+        }
+    }
+
     body.content-not-embeddable & {
         .iframe-container {
             display: none;
